fix: add spacing between info card description and GitHub button

--- a/css/style.css
+++ b/css/style.css
@@ -427,7 +427,7 @@ input[type="range"]::-moz-range-thumb {
   font-size: 11px;
   color: rgba(255, 255, 255, 0.75);
   line-height: 1.55;
-  margin: 0;
+  margin: 0 0 10px 0;
 }
 
 .about-description a {
